--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a href="https://twitter.com/cloak_codes" target="_blank"><i class="fa-brands fa-twitter"></i></a>
         <a href="https://github.com/cloak-codes" target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="https://www.linkedin.com/in/george-cloakey/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="" target="_blank"><i class="fa-solid fa-envelope" target="_blank"></i></a>
+        <a href="#contact-me"><i class="fa-solid fa-envelope"></i></a>
       </div>
     </section>
 
