--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@
     <br>
     <p><span class="bold">SOFT SKILLS:</span> <br>
     <ul>
-      <li><span>Natural problem-solver and critical thinker.</span></li>
-      <li><span>Exceptional communication and interpersonal skills.</span></li>
-      <li><span>Passionate and always hungry to learn.</span></li>
+      <li><span class="skills">Natural problem-solver and critical thinker.</span></li>
+      <li><span class="skills">Exceptional communication and interpersonal skills.</span></li>
+      <li><span class="skills">Passionate and always hungry to learn.</span></li>
     </ul>
     </p>
   </div>
+ 
   <img class="my-pic" src="IMG_7711-2.JPG">
 </div>
 </section> 
@@ -127,6 +128,20 @@
     </p>
   </div>
 </div></a>
+
+<a href="https://cloak-bank.vercel.app/" target="_blank">
+  <div class="gmn-tile">
+    <img class="project-tn" src="cloakbank-thumbnail.jpg">
+    <div class="gmn-desc">
+      <h4>cloak Bank App</h4>
+      <p>Fully responsive modern UI built with the latest technology.
+        <br>
+        HTML, CSS, JS, React
+      </p>
+    </div>
+  </div></a>
+
+
 <a href="https://ai-image-generator-cloak-codes.vercel.app/" target="_blank">
 <div class="gmn-tile">
   <img class="project-tn" src="ai-image-thumbnail.jpg">
