--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <section class="fade" id="about-me-content">
   <div id="blobtwo"></div>
-<h1 id="big-text" class="about-me-title" data-value="About">About</h1>
+<h1 id="big-text" class="about-me-title" data-value="About Me">About Me</h1>
 <div class="about-me-content">
   <div class="text-content">
     <p><span class="bold">LANGUAGES:</span><br> <span class="html">HTML</span>, <span class="css">CSS</span>, <span class="javascript">Javascript</span>, <span class="wordpress">Wordpress</span>, <span class="react">React</span></p>
@@ -142,6 +142,19 @@
   </div></a>
 
 
+  <a href="https://cloak-codes.github.io/AGoodDayCo/" target="_blank">
+    <div class="gmn-tile">
+      <img class="project-tn" src="agoodday-thumbnail.jpg">
+      <div class="gmn-desc">
+        <h4>A Good Day Co.</h4>
+        <p>Fully responsive e-commerce store. Add and remove items from cart, and search products in the store.
+          <br>
+          HTML, CSS, JS
+        </p>
+      </div>
+    </div></a>
+
+
 <a href="https://ai-image-generator-cloak-codes.vercel.app/" target="_blank">
 <div class="gmn-tile">
   <img class="project-tn" src="ai-image-thumbnail.jpg">
@@ -180,3 +193,4 @@
     <script async src="script.js"></script>
   </body>
 </html>
+
