--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <nav class="navbar">
         <a class="link" href="#"><button class="top-left-text">
-          <span id="thick-text">cloak</span>codes
+         cloakcodes
         </button></a>
       </div>
       <div class="nav-links">
@@ -38,6 +38,10 @@
     <div id="blur"></div>
     </section>
 
+    <div class="dark-mode-button">
+      <button id="dark-mode-btn"><i class="fa-solid fa-moon fa-xl"></i></button>      
+    </div>
+
     <!--Home-->
 
     <section class="fade" id="home-content">
@@ -47,10 +51,10 @@
         come to life.
       </p>
       <div class="socials-container">
-        <a href="https://twitter.com/cloak_codes" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://github.com/cloak-codes" target="_blank"><i class="fa-brands fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/george-cloakey/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#contact-me"><i class="fa-solid fa-envelope"></i></a>
+        <a class="links" href="https://twitter.com/cloak_codes" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a class="links" href="https://github.com/cloak-codes" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a class="links" href="https://www.linkedin.com/in/george-cloakey/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a class="links" href="#contact-me"><i class="fa-solid fa-envelope"></i></a>
       </div>
     </section>
 
@@ -64,11 +68,11 @@
     <p><span class="bold">LANGUAGES:</span><br> <span class="html">HTML</span>, <span class="css">CSS</span>, <span class="javascript">Javascript</span>, <span class="wordpress">Wordpress</span>, <span class="react">React</span></p>
     <br>
     <p><span class="bold">CERTIFICATES:</span> <br>
-       <span class="certs"><a href="https://www.freecodecamp.org/certification/cloak-codes/responsive-web-design" target="_blank">FCC Responsive Web Design</a></span>
+       <span class="certs"><a class="links" href="https://www.freecodecamp.org/certification/cloak-codes/responsive-web-design" target="_blank">FCC Responsive Web Design</a></span>
       <br>
-      <span class="certs"><a href="https://www.freecodecamp.org/certification/cloak-codes/javascript-algorithms-and-data-structures" target="_blank">FCC Javascript Algorithms and Data Structures</a></span>
+      <span class="certs"><a class="links" href="https://www.freecodecamp.org/certification/cloak-codes/javascript-algorithms-and-data-structures" target="_blank">FCC Javascript Algorithms and Data Structures</a></span>
       <br>
-      <span class="certs"><a href="https://www.freecodecamp.org/certification/cloak-codes/front-end-development-libraries" target="_blank">FCC Front End Development Libraries</a></span>
+      <span class="certs"><a class="links" href="https://www.freecodecamp.org/certification/cloak-codes/front-end-development-libraries" target="_blank">FCC Front End Development Libraries</a></span>
      
     </p>
     <br>
@@ -93,7 +97,7 @@
 <h1 id="projects-title" data-value="projects">Projects</h1>
   <div class="projects-content">
 
-<a href="https://cloak-codes.github.io/ToDoList/">
+<a class="links" href="https://cloak-codes.github.io/ToDoList/">
 <div class="gmn-tile">
   <img class="project-tn" src="todo-thumbnail.jpg">
   <div class="gmn-desc">
@@ -106,7 +110,7 @@
 </div></a>
 
 
- <a href="https://cloak-codes.github.io/Guess-My-Number-Game/" target="_blank">
+ <a class="links" href="https://cloak-codes.github.io/Guess-My-Number-Game/" target="_blank">
 <div class="gmn-tile">
  <img class="project-tn" src="guess-my-number-thumbnail.jpg">
   <div class="gmn-desc">
@@ -117,7 +121,7 @@
     </p>
   </div>
 </div></a>
-<a href="https://chatbot-ai-nu.vercel.app/" target="_blank">
+<a class="links" href="https://chatbot-ai-nu.vercel.app/" target="_blank">
 <div class="gmn-tile">
   <img class="project-tn" src="chatBot-thumbnail.jpg">
   <div class="gmn-desc">
@@ -129,7 +133,7 @@
   </div>
 </div></a>
 
-<a href="https://cloak-bank.vercel.app/" target="_blank">
+<a class="links" href="https://cloak-bank.vercel.app/" target="_blank">
   <div class="gmn-tile">
     <img class="project-tn" src="cloakbank-thumbnail.jpg">
     <div class="gmn-desc">
@@ -142,7 +146,7 @@
   </div></a>
 
 
-  <a href="https://cloak-codes.github.io/AGoodDayCo/" target="_blank">
+  <a class="links" href="https://cloak-codes.github.io/AGoodDayCo/" target="_blank">
     <div class="gmn-tile">
       <img class="project-tn" src="agoodday-thumbnail.jpg">
       <div class="gmn-desc">
@@ -155,7 +159,7 @@
     </div></a>
 
 
-<a href="https://ai-image-generator-cloak-codes.vercel.app/" target="_blank">
+<a class="links" href="https://ai-image-generator-cloak-codes.vercel.app/" target="_blank">
 <div class="gmn-tile">
   <img class="project-tn" src="ai-image-thumbnail.jpg">
   <div class="gmn-desc">
