--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
   </div>
 </div></a>
 
-<a class="links" href="https://cloak-bank.vercel.app/" target="_blank">
+<a class="links" href="https://cloak-codes.github.io/My-Running-Buddy/" target="_blank">
   <div class="gmn-tile">
-    <img class="project-tn" src="cloakbank-thumbnail.jpg">
+    <img class="project-tn" src="mrb-thumbnail.jpg">
     <div class="gmn-desc">
-      <h4>cloak Bank App</h4>
-      <p>Fully responsive modern UI built with the latest technology.
+      <h4>My Running Buddy</h4>
+      <p>My Running Buddy offers deep engagement and motivation while running. 
         <br>
-        HTML, CSS, JS, React
+        HTML, CSS, JS
       </p>
     </div>
   </div></a>
@@ -199,4 +199,3 @@
     <script async src="script.js"></script>
   </body>
 </html>
-
